fix z-index

--- a/src/angular-scroll-top.less
+++ b/src/angular-scroll-top.less
@@ -9,7 +9,7 @@
         bottom: 30px;
         transition: background .2s linear;
         cursor: pointer;
-        z-index: 99999;
+        z-index: 1000;
         border: 2px solid @seagreen;
          height: 40px;
             background-color: @color-sombre;
